# sol-commons

./: AGENTS.md  README.md  ROADMAP.md
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.meta.json
history/: sol-commons-2z5-plan.md
offchain/: commons_rewards.idl.json
offchain/pipeline/: index.js
offchain/praise-service/: README.md  config.json  index.js
offchain/simulator-pipeline/: README.md  config.json  index.js
offchain/tokenlog-service/: README.md  config.json  index.js
scripts/: run-offchain-with-validator.sh
sol-commons-workspace/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
sol-commons-workspace/cli/: emit-reward-batch.ts
sol-commons-workspace/programs/commons_abc/: README.md
sol-commons-workspace/programs/commons_abc/programs/commons_abc/: Cargo.toml
sol-commons-workspace/programs/commons_abc/programs/commons_abc/src/: lib.rs
sol-commons-workspace/programs/commons_abc/tests/: curve_math.rs
sol-commons-workspace/programs/commons_conviction_voting/: README.md
sol-commons-workspace/programs/commons_conviction_voting/programs/commons_conviction_voting/: Cargo.toml
sol-commons-workspace/programs/commons_conviction_voting/programs/commons_conviction_voting/src/: lib.rs
sol-commons-workspace/programs/commons_conviction_voting/tests/: conviction.rs
sol-commons-workspace/programs/commons_hatch/: README.md
sol-commons-workspace/programs/commons_hatch/programs/commons_hatch/: Cargo.toml
sol-commons-workspace/programs/commons_hatch/programs/commons_hatch/src/: lib.rs
sol-commons-workspace/programs/commons_hatch/tests/: commons_hatch.rs
sol-commons-workspace/programs/commons_rewards/: README.md
sol-commons-workspace/programs/commons_rewards/programs/commons_rewards/: Cargo.toml
sol-commons-workspace/programs/commons_rewards/programs/commons_rewards/src/: lib.rs
sol-commons-workspace/programs/commons_rewards/tests/: rewards.rs
sol-commons-workspace/programs/commons_tokenlog/src/: lib.rs
sol-commons-workspace/programs/sol-commons-workspace/: Cargo.toml
sol-commons-workspace/programs/sol-commons-workspace/src/: lib.rs
sol-commons-workspace/tests/: full-lifecycle.ts  offchain-integration.js  sol-commons-workspace.ts
sol-commons-workspace/tests/helpers/: offchainPayload.js
