[workspace]
members = [
    "programs/commons_rewards/programs/commons_rewards",
    "programs/commons_conviction_voting/programs/commons_conviction_voting",
    "programs/commons_abc/programs/commons_abc",
    "programs/commons_hatch/programs/commons_hatch",
    "programs/sol-commons-workspace",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
