[package]
name = "commons_hatch"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "commons_hatch"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", default-features = false, features = ["token", "token_2022", "token_2022_extensions", "associated_token"] }
solana-merkle-tree = "3.1.1"
commons_abc = { path = "../../../commons_abc/programs/commons_abc", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "=2.3.1"
solana-sdk = "=2.3.1"
tokio = { version = "1.38.0", features = ["macros", "rt"] }
spl-token = "5.0.0"
